Bundle all source code with npm tarball

--- a/package.json
+++ b/package.json
@@ -10,7 +10,15 @@
     ]
   },
   "files": [
-    "es5"
+    "bin",
+    "css",
+    "es5",
+    "example",
+    "lib",
+    "src",
+    "svg",
+    "test",
+    "config.json"
   ],
   "dependencies": {
     "base64-url": "^1.3.3",
