--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
   "presets": ["es2015", "react"],
-  "plugins": ["transform-class-properties", "./lib/babel-plugin-insert-css"]
+  "plugins": ["transform-class-properties", "./lib/babel-plugin-insert-css", "transform-runtime"]
 }
