--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "config.json"
   ],
   "dependencies": {
+    "babel-runtime": "^6.20.0",
     "base64-url": "^1.3.3",
     "case": "^1.4.2",
     "debug": "^2.2.0",
@@ -70,6 +71,7 @@
     "babel-plugin-react-transform": "^2.0.0",
     "babel-plugin-transform-class-properties": "^6.5.2",
     "babel-plugin-transform-object-rest-spread": "^6.5.0",
+    "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
     "babelify": "^7.2.0",
@@ -102,12 +104,11 @@
     "start": "budo example/index.js:bundle.js --pushstate --dir example",
     "dev": "budo src/dev.js:bundle.js --pushstate --dir statics -- -p browserify-hmr",
     "test": "exit 0",
-    "build": "mkdirp dist && npm run -s build:js && npm run -s build:min.js",
+    "build:example": "mkdirp build && npm run -s build:example:statics && npm run -s build:example:js",
+    "build:example:statics": "copyfiles -u 1 'example/**/*' build",
+    "build:example:js": "NODE_ENV=production browserify -g envify -g uglifyify example/index.js | uglifyjs -c -m > build/bundle.js",
     "build:markers": "node ./bin/build_markers.js",
-    "build:statics": "copyfiles -u 1 'statics/**/*' build",
-    "build:js": "NODE_ENV=production browserify -g envify --standalone MapFilter src/index.js > dist/mapfilter.js",
     "build:es5": "rimraf es5 && babel src/ -d es5/",
-    "build:min.js": "NODE_ENV=production browserify -g envify -g uglifyify --standalone MapFilter src/index.js | uglifyjs -c -m > dist/mapfilter.min.js",
     "clean": "rimraf dist es5",
     "prepublish": "npm run build:es5"
   },
