--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
     "rework-import": "^2.1.0",
     "round-to": "^1.1.0",
     "turf-extent": "^1.0.4",
-    "url-regex": "^3.2.0"
+    "url-regex": "^3.2.0",
+    "xform-uploader": "digidem/xform-uploader"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
