Use packaged version of mapbox-gl-js for non-browserify build chains

--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
       "brfs"
     ]
   },
+  "browser": {
+    "mapbox-gl/dist/mapbox-gl.js": "mapbox-gl"
+  },
   "files": [
     "bin",
     "css",
