--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,13 @@
 {
   "presets": ["es2015", "react"],
-  "plugins": ["transform-class-properties", "./lib/babel-plugin-insert-css", "transform-runtime"]
+  "plugins": [
+    [
+      "react-intl", {
+        "messagesDir": "./build/messages/"
+      }
+    ],
+    "transform-class-properties",
+    "./lib/babel-plugin-insert-css",
+    "transform-runtime"
+  ]
 }
