--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "feature-filter": "^2.2.0",
     "feature-filter-geojson": "^1.0.0",
     "flat": "^2.0.1",
-    "geojsonhint": "^1.2.0",
+    "geojsonhint": "^2.0.0",
     "get-scrollbar-width": "^1.0.4",
     "insert-css": "^2.0.0",
     "is-plain-object": "^2.0.1",
@@ -44,16 +44,15 @@
     "object-assign": "^4.1.0",
     "randombytes": "^2.0.3",
     "react-addons-shallow-compare": "^15.3.2",
-    "react-date-range": "^0.2.4",
+    "react-date-range": "^0.9.2",
     "react-imageloader": "^2.1.0",
     "react-intl": "^2.1.5",
-    "react-intl-redux": "^0.1.0",
+    "react-intl-redux": "^0.3.0",
     "react-modal": "^1.5.2",
     "react-motion": "^0.4.5",
     "react-overlays": "^0.6.10",
     "react-pure-render": "^1.0.2",
-    "react-redux": "^4.4.0",
-    "react-router": "^4.0.0-alpha.5",
+    "react-redux": "^5.0.2",
     "react-router-redux": "^4.0.6",
     "react-tap-event-plugin": "^2.0.0",
     "react-virtualized": "^8.5.2",
@@ -65,6 +64,7 @@
     "rework": "^1.0.1",
     "rework-import": "^2.1.0",
     "round-to": "^1.1.0",
+    "shallow-equal": "^1.0.0",
     "turf-extent": "^1.0.4",
     "url-regex": "^3.2.0"
   },
@@ -90,9 +90,9 @@
     "envify": "^3.4.1",
     "gh-pages": "^0.11.0",
     "mkdirp": "^0.5.1",
+    "pump": "^1.0.1",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
-    "pump": "^1.0.1",
     "request": "^2.79.0",
     "rimraf": "^2.5.4",
     "spritesmith-cli": "^1.1.2",
