--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "dotenv": "^2.0.0",
     "envify": "^3.4.1",
     "gh-pages": "^0.11.0",
+    "history": "^4.5.1",
     "mkdirp": "^0.5.1",
     "pump": "^1.0.1",
     "react": "^15.4.1",
