--- a/package.json
+++ b/package.json
@@ -92,8 +92,6 @@
     "history": "^4.5.1",
     "mkdirp": "^0.5.1",
     "pump": "^1.0.1",
-    "react": "^15.4.1",
-    "react-dom": "^15.4.1",
     "request": "^2.79.0",
     "rimraf": "^2.5.4",
     "spritesmith-cli": "^1.1.2",
@@ -104,6 +102,10 @@
     "uglify-js": "^2.7.4",
     "uglifyify": "^3.0.4",
     "urlencode": "^1.1.0"
+  },
+  "peerDependencies": {
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1"
   },
   "license": "MIT",
   "scripts": {
@@ -125,8 +127,5 @@
     "ignore": [
       "build/**"
     ]
-  },
-  "peerDependencies": {
-    "react": "^15.0.0"
   }
 }
