--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-mapfilter",
   "description": "A React Component for viewing and filtering GeoJSON",
-  "version": "0.1.0",
+  "version": "1.0.0-alpha.1",
   "main": "es5/index.js",
   "browserify": {
     "transform": [
