https for resizer

--- a/config.json
+++ b/config.json
@@ -10,7 +10,7 @@
   },
   "mapboxToken": "pk.eyJ1IjoiZ21hY2xlbm5hbiIsImEiOiJSaWVtd2lRIn0.ASYMZE2HhwkAw4Vt7SavEg",
   "defaultMapStyle": "mapbox://styles/gmaclennan/cio7mcryg0015akm9b6wur5ic",
-  "imageResizer": "http://resizer.digital-democracy.org/{width}/{height}/{url}",
+  "imageResizer": "https://resizer.digital-democracy.org/{width}/{height}/{url}",
   "templates": [],
   "colors": [
     "#1f78b4",
