--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "config.json"
   ],
   "dependencies": {
+    "@segment/isodate": "^1.0.2",
     "babel-runtime": "^6.20.0",
     "base64-url": "^1.3.3",
     "case": "^1.4.2",
+    "chrono-node": "^1.2.5",
     "debug": "^2.2.0",
     "deep-equal": "^1.0.1",
     "drag-drop": "^2.11.0",
