--- a/package.json
+++ b/package.json
@@ -12,17 +12,6 @@
   "browser": {
     "mapbox-gl/dist/mapbox-gl.js": "mapbox-gl"
   },
-  "files": [
-    "bin",
-    "css",
-    "es5",
-    "example",
-    "lib",
-    "src",
-    "svg",
-    "test",
-    "config.json"
-  ],
   "dependencies": {
     "@segment/isodate": "^1.0.2",
     "babel-runtime": "^6.20.0",
@@ -31,11 +20,8 @@
     "chrono-node": "^1.2.5",
     "debug": "^2.2.0",
     "deep-equal": "^1.0.1",
-    "drag-drop": "^2.11.0",
-    "feature-filter": "^2.2.0",
     "feature-filter-geojson": "^1.0.0",
     "flat": "^2.0.1",
-    "geojsonhint": "^2.0.0",
     "get-scrollbar-width": "^1.0.4",
     "insert-css": "^2.0.0",
     "is-plain-object": "^2.0.1",
@@ -45,26 +31,18 @@
     "moment": "^2.15.2",
     "object-assign": "^4.1.0",
     "randombytes": "^2.0.3",
-    "react-addons-shallow-compare": "^15.3.2",
     "react-date-range": "^0.9.2",
     "react-imageloader": "^2.1.0",
     "react-intl": "^2.1.5",
     "react-intl-redux": "^0.3.0",
-    "react-modal": "^1.5.2",
-    "react-motion": "^0.4.5",
     "react-overlays": "^0.6.10",
-    "react-pure-render": "^1.0.2",
     "react-redux": "^5.0.2",
-    "react-router-redux": "^4.0.6",
     "react-tap-event-plugin": "^2.0.0",
     "react-virtualized": "^8.5.2",
     "recompose": "^0.20.2",
-    "redbox-react": "^1.3.2",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0",
     "reselect": "^2.5.4",
-    "rework": "^1.0.1",
-    "rework-import": "^2.1.0",
     "round-to": "^1.1.0",
     "shallow-equal": "^1.0.0",
     "turf-extent": "^1.0.4",
@@ -84,7 +62,7 @@
     "babelify": "^7.2.0",
     "brfs": "^1.4.3",
     "browserify": "^13.0.0",
-    "browserify-hmr": "gmaclennan/browserify-hmr#gmaclennan-patch-1",
+    "browserify-hmr": "github:gmaclennan/browserify-hmr#gmaclennan-patch-1",
     "budo": "^8.0.4",
     "copyfiles": "^0.2.1",
     "dependency-check": "^2.5.1",
@@ -94,6 +72,7 @@
     "history": "^4.5.1",
     "mkdirp": "^0.5.1",
     "pump": "^1.0.1",
+    "redbox-react": "^1.3.2",
     "request": "^2.79.0",
     "rimraf": "^2.5.4",
     "spritesmith-cli": "^1.1.2",
@@ -122,7 +101,6 @@
     "build:markers": "node ./bin/build_markers.js",
     "build:es5": "rimraf es5 && babel src/ -d es5/",
     "watch": "rimraf es5 && babel src/ -w -d es5/",
-    "clean": "rimraf dist es5",
     "prepublish": "npm run build:es5"
   },
   "standard": {
@@ -130,5 +108,24 @@
     "ignore": [
       "build/**"
     ]
-  }
+  },
+  "directories": {
+    "example": "example",
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/digidem/react-mapfilter.git"
+  },
+  "keywords": [
+    "react",
+    "geojson",
+    "map",
+    "filter"
+  ],
+  "author": "Digital Democracy",
+  "bugs": {
+    "url": "https://github.com/digidem/react-mapfilter/issues"
+  },
+  "homepage": "https://github.com/digidem/react-mapfilter#readme"
 }
