--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "react-date-range": "^0.9.2",
     "react-imageloader": "^2.1.0",
     "react-intl": "^2.1.5",
-    "react-intl-redux": "^0.3.0",
+    "react-intl-redux": "^0.4.1",
     "react-overlays": "^0.6.10",
     "react-redux": "^5.0.2",
     "react-tap-event-plugin": "^2.0.0",
@@ -72,8 +72,13 @@
     "history": "^4.5.1",
     "mkdirp": "^0.5.1",
     "pump": "^1.0.1",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
     "redbox-react": "^1.3.2",
     "request": "^2.79.0",
+    "resolve": "^1.3.1",
+    "rework": "^1.0.1",
+    "rework-import": "^2.1.0",
     "rimraf": "^2.5.4",
     "spritesmith-cli": "^1.1.2",
     "spritezero-cli": "^1.0.2",
