--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "browserify": "^13.0.0",
     "browserify-hmr": "github:gmaclennan/browserify-hmr#gmaclennan-patch-1",
     "budo": "^8.0.4",
+    "bundle-collapser": "^1.2.1",
     "copyfiles": "^0.2.1",
     "dependency-check": "^2.5.1",
     "dotenv": "^2.0.0",
@@ -105,7 +106,7 @@
     "build:example:js": "NODE_ENV=production browserify -g envify -g uglifyify example/index.js | uglifyjs -c -m > build/bundle.js",
     "build:markers": "node ./bin/build_markers.js",
     "build:es5": "rimraf es5 && babel src/ -d es5/",
-    "build:umd": "rimraf dist && mkdirp dist && NODE_ENV=production browserify -g envify -g uglifyify -s MapFilter src/index.js | uglifyjs -c warnings=false -m > dist/react-mapfilter.js",
+    "build:umd": "rimraf dist && mkdirp dist && NODE_ENV=production browserify -g envify -g uglifyify -p bundle-collapser/plugin -s MapFilter src/index.js | uglifyjs -c warnings=false -m > dist/react-mapfilter.js",
     "watch": "rimraf es5 && babel src/ -w -d es5/",
     "prepublish": "npm run build:es5 & npm run build:umd"
   },
