include sourcemaps in es5 code on npm

--- a/package.json
+++ b/package.json
@@ -99,9 +99,9 @@
     "build:example:statics": "copyfiles -u 1 'example/**/*' build",
     "build:example:js": "NODE_ENV=production browserify -t babelify -t brfs -g envify -g uglifyify example/index.js | uglifyjs -c -m > build/bundle.js",
     "build:markers": "node ./bin/build_markers.js",
-    "build:es5": "rimraf es5 && babel src/ -d es5/",
+    "build:es5": "rimraf es5 && babel src/ --source-maps -d es5/",
     "build:umd": "rimraf dist && mkdirp dist && NODE_ENV=production browserify -t babelify -g envify -g uglifyify -p bundle-collapser/plugin -s MapFilter src/index.js | uglifyjs -c warnings=false -m > dist/react-mapfilter.js",
-    "watch": "rimraf es5 && babel src/ -w -d es5/",
+    "watch": "rimraf es5 && babel src/ -w --source-maps -d es5/",
     "prepublish": "npm run build:es5 & npm run build:umd"
   },
   "standard": {
