--- a/package.json
+++ b/package.json
@@ -92,7 +92,7 @@
   "scripts": {
     "dependency-check": "dependency-check ./package.json && dependency-check ./package.json --unused --no-dev",
     "lint": "standard",
-    "start": "budo example/index.js:bundle.js --pushstate --dir example",
+    "start": "budo example/index.js:bundle.js --pushstate --dir example -- -t babelify",
     "dev": "budo src/dev.js:bundle.js --pushstate --dir example -- -p browserify-hmr",
     "test": "exit 0",
     "build:example": "mkdirp build && npm run -s build:example:statics && npm run -s build:example:js",
