--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "deep-equal": "^1.0.1",
     "feature-filter-geojson": "^1.0.0",
     "flat": "^2.0.1",
+    "geojson-flatten": "^0.2.1",
     "get-scrollbar-width": "^1.0.4",
     "insert-css": "^2.0.0",
     "is-plain-object": "^2.0.1",
