--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "material-ui": "^0.16.4",
     "moment": "^2.15.2",
     "object-assign": "^4.1.0",
+    "prop-types": "^15.5.8",
     "randombytes": "^2.0.3",
     "react-date-range": "^0.9.2",
     "react-imageloader": "^2.1.0",
