--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "get-scrollbar-width": "^1.0.4",
     "insert-css": "^2.0.0",
     "is-plain-object": "^2.0.1",
+    "localforage": "^1.5.0",
     "lodash": "^4.16.4",
     "mapbox-gl": "github:gmaclennan/mapbox-gl-js#geojson-reload-tile",
     "material-ui": "^0.18.0",
@@ -34,6 +35,7 @@
     "react-virtualized": "^9.7.2",
     "recompose": "^0.20.2",
     "redux": "^3.6.0",
+    "redux-persist": "^4.8.0",
     "redux-thunk": "^2.1.0",
     "reselect": "^2.5.4",
     "round-to": "^1.1.0",
