--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0-alpha.9",
   "main": "es5/index.js",
   "dependencies": {
+    "@mapbox/sexagesimal": "^1.0.0",
     "@segment/isodate": "^1.0.2",
     "babel-runtime": "^6.20.0",
     "base64-url": "^1.3.3",
