--- a/package.json
+++ b/package.json
@@ -9,46 +9,46 @@
     "babel-runtime": "^6.20.0",
     "base64-url": "^1.3.3",
     "case": "^1.4.2",
-    "chrono-node": "^1.2.5",
-    "debug": "^2.2.0",
+    "chrono-node": "^1.3.4",
+    "debug": "^2.6.8",
     "deep-equal": "^1.0.1",
     "feature-filter-geojson": "^1.0.0",
     "flat": "^2.0.1",
     "geojson-flatten": "^0.2.1",
     "get-scrollbar-width": "^1.0.4",
     "insert-css": "^2.0.0",
-    "is-plain-object": "^2.0.1",
+    "is-plain-object": "^2.0.3",
     "localforage": "^1.5.0",
     "lodash": "^4.16.4",
-    "mapbox-gl": "github:gmaclennan/mapbox-gl-js#geojson-reload-tile",
-    "material-ui": "^0.18.0",
+    "mapbox-gl": "^0.38.0",
+    "material-ui": "^0.18.6",
     "moment": "^2.15.2",
     "object-assign": "^4.1.0",
-    "prop-types": "^15.5.8",
-    "randombytes": "^2.0.3",
-    "react-date-range": "^0.9.2",
+    "prop-types": "^15.5.10",
+    "randombytes": "^2.0.5",
+    "react-date-range": "^0.9.4",
     "react-imageloader": "^2.1.0",
-    "react-intl": "^2.1.5",
-    "react-intl-redux": "^0.4.1",
+    "react-intl": "^2.3.0",
+    "react-intl-redux": "^0.6.0",
     "react-overlays": "^0.7.0",
-    "react-redux": "^5.0.2",
+    "react-redux": "^5.0.5",
     "react-tap-event-plugin": "^2.0.1",
-    "react-virtualized": "^9.7.2",
-    "recompose": "^0.20.2",
-    "redux": "^3.6.0",
-    "redux-persist": "^4.8.0",
+    "react-virtualized": "^9.8.0",
+    "recompose": "^0.23.5",
+    "redux": "^3.7.1",
+    "redux-persist": "^4.8.2",
     "redux-thunk": "^2.1.0",
     "reselect": "^2.5.4",
     "round-to": "^1.1.0",
     "shallow-equal": "^1.0.0",
     "turf-extent": "^1.0.4",
-    "url-regex": "^3.2.0",
-    "utm": "^1.1.0"
+    "url-regex": "^4.1.1",
+    "utm": "^1.1.1"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
-    "babel-core": "^6.20.0",
-    "babel-eslint": "^7.1.1",
+    "babel-core": "^6.25.0",
+    "babel-eslint": "^7.2.3",
     "babel-plugin-react-intl": "^2.3.1",
     "babel-plugin-react-transform": "^2.0.0",
     "babel-plugin-transform-class-properties": "^6.5.2",
@@ -58,33 +58,33 @@
     "babel-preset-react": "^6.5.0",
     "babelify": "^7.2.0",
     "brfs": "^1.4.3",
-    "browserify": "^13.0.0",
+    "browserify": "^14.0.0",
     "browserify-hmr": "github:gmaclennan/browserify-hmr#gmaclennan-patch-1",
-    "budo": "^8.0.4",
+    "budo": "^10.0.3",
     "bundle-collapser": "^1.2.1",
-    "copyfiles": "^0.2.1",
-    "dependency-check": "^2.5.1",
+    "copyfiles": "^1.2.0",
+    "dependency-check": "^2.9.1",
     "dotenv": "^2.0.0",
-    "envify": "^3.4.1",
-    "gh-pages": "^0.11.0",
-    "history": "^4.5.1",
+    "envify": "^4.1.0",
+    "gh-pages": "^1.0.0",
+    "history": "^4.6.3",
     "mkdirp": "^0.5.1",
     "pump": "^1.0.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "redbox-react": "^1.3.2",
+    "redbox-react": "^1.4.3",
     "request": "^2.79.0",
-    "resolve": "^1.3.1",
+    "resolve": "^1.3.3",
     "rework": "^1.0.1",
     "rework-import": "^2.1.0",
     "rimraf": "^2.5.4",
     "spritesmith-cli": "^1.1.2",
     "spritezero-cli": "^1.0.2",
-    "standard": "^8.5.0",
-    "tape": "^4.4.0",
+    "standard": "^10.0.0",
+    "tape": "^4.7.0",
     "traverse": "^0.6.6",
-    "uglify-js": "^2.7.4",
-    "uglifyify": "^3.0.4",
+    "uglify-js": "^3.0.0",
+    "uglifyify": "^4.0.2",
     "urlencode": "^1.1.0"
   },
   "peerDependencies": {
