--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "dotenv": "^2.0.0",
     "envify": "^4.1.0",
     "gh-pages": "^1.0.0",
+    "glob": "^7.1.2",
     "history": "^4.6.3",
     "mkdirp": "^0.5.1",
     "pump": "^1.0.1",
