--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "base64-url": "^1.3.3",
     "case": "^1.4.2",
     "chrono-node": "^1.3.4",
-    "debug": "^2.6.8",
+    "classnames": "^2.2.5",
+    "debug": "^3.1.0",
     "deep-equal": "^1.0.1",
     "feature-filter-geojson": "^1.0.0",
     "flat": "^4.0.0",
@@ -21,9 +22,9 @@
     "is-plain-object": "^2.0.3",
     "localforage": "^1.5.0",
     "lodash": "^4.16.4",
-    "mapbox-gl": "^0.39.1",
-    "material-ui": "^1.0.0-beta.8",
-    "material-ui-icons": "^1.0.0-alpha.19",
+    "mapbox-gl": "^0.41.0",
+    "material-ui": "^1.0.0-beta.16",
+    "material-ui-icons": "^1.0.0-beta.15",
     "moment": "^2.15.2",
     "object-assign": "^4.1.0",
     "prop-types": "^15.5.10",
@@ -34,15 +35,14 @@
     "react-intl": "^2.3.0",
     "react-intl-redux": "^0.6.0",
     "react-isolated-scroll": "^0.1.1",
-    "react-overlays": "^0.7.0",
+    "react-overlays": "^0.8.2",
     "react-redux": "^5.0.5",
-    "react-tap-event-plugin": "^2.0.1",
     "react-virtualized": "^9.8.0",
-    "recompose": "^0.23.5",
+    "recompose": "^0.26.0",
     "redux": "^3.7.1",
     "redux-persist": "^4.8.2",
     "redux-thunk": "^2.1.0",
-    "reselect": "^2.5.4",
+    "reselect": "^3.0.1",
     "round-to": "^1.1.0",
     "shallow-equal": "^1.0.0",
     "turf-extent": "^1.0.4",
@@ -50,15 +50,13 @@
     "utm": "^1.1.1"
   },
   "devDependencies": {
+    "@storybook/react": "^3.2.3",
     "babel-cli": "^6.18.0",
-    "babel-core": "^6.25.0",
-    "babel-eslint": "^7.2.3",
+    "babel-eslint": "^8.0.1",
     "babel-plugin-react-intl": "^2.3.1",
-    "babel-plugin-react-transform": "^2.0.0",
-    "babel-plugin-transform-class-properties": "^6.5.2",
-    "babel-plugin-transform-object-rest-spread": "^6.5.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.5.0",
     "babelify": "^7.2.0",
     "brfs": "^1.4.3",
@@ -68,7 +66,7 @@
     "bundle-collapser": "^1.2.1",
     "copyfiles": "^1.2.0",
     "dependency-check": "^2.9.1",
-    "dotenv": "^2.0.0",
+    "dotenv": "^4.0.0",
     "envify": "^4.1.0",
     "gh-pages": "^1.0.0",
     "glob": "^7.1.2",
@@ -83,15 +81,12 @@
     "rework": "^1.0.1",
     "rework-import": "^2.1.0",
     "rimraf": "^2.5.4",
-    "spritesmith-cli": "^1.1.2",
-    "spritezero-cli": "^1.0.2",
     "standard": "^10.0.0",
     "tape": "^4.7.0",
     "traverse": "^0.6.6",
-    "uglify-js": "^3.0.0",
+    "uglify-es": "^3.1.3",
     "uglifyify": "^4.0.2",
-    "urlencode": "^1.1.0",
-    "@storybook/react": "^3.2.3"
+    "urlencode": "^1.1.0"
   },
   "peerDependencies": {
     "react": "^15.4.1",
