--- a/package.json
+++ b/package.json
@@ -71,8 +71,8 @@
     "history": "^4.6.3",
     "mkdirp": "^0.5.1",
     "pump": "^1.0.1",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
     "redbox-react": "^1.4.3",
     "request": "^2.79.0",
     "resolve": "^1.3.3",
@@ -87,8 +87,8 @@
     "urlencode": "^1.1.0"
   },
   "peerDependencies": {
-    "react": "^15.4.1",
-    "react-dom": "^15.4.1"
+    "react": "^15.4.1 || ^16",
+    "react-dom": "^15.4.1 || ^16"
   },
   "license": "MIT",
   "scripts": {
