--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "case": "^1.4.2",
     "chrono-node": "^1.3.4",
     "classnames": "^2.2.5",
+    "d3-dsv": "^1.0.7",
     "debug": "^3.1.0",
     "deep-equal": "^1.0.1",
     "feature-filter-geojson": "^1.0.0",
+    "file-saver": "^1.3.3",
     "flat": "^4.0.0",
     "geojson-flatten": "^0.2.1",
     "get-scrollbar-width": "^1.0.4",
