Add report toolbar with hide fields + print
This changes how print works, by setting a global state of print=true, giving a chance to re-render views suitable for printing.
Adds a page-size option for A4 and US Letter, should default to the correct setting according to the navigator.language
Moves field visibility toggles from a global state to a view-specific state
Adds the option to store state for each view

--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "rework-import": "^2.1.0",
     "rimraf": "^2.5.4",
     "standard": "^10.0.0",
+    "storybook-addon-intl": "^2.1.2",
     "tape": "^4.7.0",
     "traverse": "^0.6.6",
     "uglify-es": "^3.1.3",
