--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "description": "A React Component for viewing and filtering GeoJSON",
   "version": "1.0.0-alpha.19",
   "main": "es5/index.js",
+  "peerDependencies": {
+    "react": "^15.4.1 || ^16",
+    "react-dom": "^15.4.1 || ^16",
+    "material-ui": "^1.0.0-beta.20"
+  },
   "dependencies": {
     "@mapbox/sexagesimal": "^1.0.0",
     "@segment/isodate": "^1.0.2",
@@ -25,8 +30,7 @@
     "localforage": "^1.5.0",
     "lodash": "^4.16.4",
     "mapbox-gl": "^0.41.0",
-    "material-ui": "^1.0.0-beta.16",
-    "material-ui-icons": "^1.0.0-beta.15",
+    "material-ui-icons": "^1.0.0-beta.17",
     "moment": "^2.15.2",
     "object-assign": "^4.1.0",
     "prop-types": "^15.5.10",
@@ -71,6 +75,7 @@
     "gh-pages": "^1.0.0",
     "glob": "^7.1.2",
     "history": "^4.6.3",
+    "material-ui": "1.0.0-beta.20",
     "mkdirp": "^0.5.1",
     "pump": "^1.0.1",
     "react": "^16.0.0",
@@ -88,10 +93,6 @@
     "uglify-es": "^3.1.3",
     "uglifyify": "^4.0.2",
     "urlencode": "^1.1.0"
-  },
-  "peerDependencies": {
-    "react": "^15.4.1 || ^16",
-    "react-dom": "^15.4.1 || ^16"
   },
   "license": "MIT",
   "scripts": {
