--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "geojson-flatten": "^0.2.1",
     "get-scrollbar-width": "^1.0.4",
     "insert-css": "^2.0.0",
-    "is-plain-object": "^2.0.3",
     "localforage": "^1.5.0",
     "lodash": "^4.16.4",
     "mapbox-gl": "^0.41.0",
@@ -77,6 +76,7 @@
     "history": "^4.6.3",
     "material-ui": "1.0.0-beta.20",
     "mkdirp": "^0.5.1",
+    "precinct": "^3.8.0",
     "pump": "^1.0.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
@@ -97,6 +97,9 @@
   "license": "MIT",
   "scripts": {
     "dependency-check": "dependency-check ./package.json && dependency-check ./package.json --unused --no-dev",
+    "check": "npm run check:used && npm run check:unused",
+    "check:used": "dependency-check ./package.json --detective precinct",
+    "check:unused": "dependency-check ./package.json --no-dev --detective precinct --unused",
     "lint": "standard",
     "start": "budo example/index.js:bundle.js --pushstate --dir example -- -t babelify",
     "dev": "budo src/dev.js:bundle.js --pushstate --dir example -- -p browserify-hmr",
