--- a/.babelrc
+++ b/.babelrc
@@ -11,7 +11,7 @@
   "plugins": [
     [
       "react-intl", {
-        "messagesDir": "./build/messages/"
+        "messagesDir": "./messages/"
       }
     ],
     "transform-class-properties",
