--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@segment/isodate": "^1.0.2",
     "autosuggest-highlight": "^3.1.0",
     "babel-runtime": "^6.20.0",
-    "base64-url": "^1.3.3",
+    "base64-url": "^2.2.0",
     "case": "^1.4.2",
     "chrono-node": "^1.3.4",
     "classnames": "^2.2.5",
@@ -28,7 +28,7 @@
     "insert-css": "^2.0.0",
     "localforage": "^1.5.0",
     "lodash": "^4.16.4",
-    "mapbox-gl": "^0.41.0",
+    "mapbox-gl": "^0.46.0",
     "material-ui": "^1.0.0-beta.35",
     "material-ui-icons": "^1.0.0-beta.35",
     "moment": "^2.15.2",
@@ -42,18 +42,19 @@
     "react-isolated-scroll": "^0.1.1",
     "react-redux": "^5.0.5",
     "react-virtualized": "^9.8.0",
-    "recompose": "^0.26.0",
+    "recompose": "^0.27.1",
     "redux": "^3.7.1",
     "redux-persist": "^4.8.2",
     "redux-thunk": "^2.1.0",
     "reselect": "^3.0.1",
-    "round-to": "^1.1.0",
+    "round-to": "^3.0.0",
     "shallow-equal": "^1.0.0",
     "turf-extent": "^1.0.4",
     "url-regex": "^4.1.1",
     "utm": "^1.1.1"
   },
   "devDependencies": {
+    "@material-ui/codemod": "^1.1.0",
     "@storybook/react": "^3.2.3",
     "babel-cli": "^6.18.0",
     "babel-eslint": "^8.0.1",
@@ -68,9 +69,9 @@
     "browserify-hmr": "github:gmaclennan/browserify-hmr#gmaclennan-patch-1",
     "budo": "^10.0.3",
     "bundle-collapser": "^1.2.1",
-    "copyfiles": "^1.2.0",
-    "dependency-check": "^2.9.1",
-    "dotenv": "^4.0.0",
+    "copyfiles": "^2.0.0",
+    "dependency-check": "^3.1.0",
+    "dotenv": "^6.0.0",
     "envify": "^4.1.0",
     "gh-pages": "^1.0.0",
     "glob": "^7.1.2",
@@ -86,12 +87,12 @@
     "rework": "^1.0.1",
     "rework-import": "^2.1.0",
     "rimraf": "^2.5.4",
-    "standard": "^10.0.0",
+    "standard": "^11.0.1",
     "storybook-addon-intl": "^2.1.2",
     "tape": "^4.7.0",
     "traverse": "^0.6.6",
     "uglify-es": "^3.1.3",
-    "uglifyify": "^4.0.2",
+    "uglifyify": "^5.0.1",
     "urlencode": "^1.1.0"
   },
   "license": "MIT",
