--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@mapbox/sexagesimal": "^1.0.0",
+    "@material-ui/core": "^1.2.3",
+    "@material-ui/icons": "^1.1.0",
     "@segment/isodate": "^1.0.2",
     "autosuggest-highlight": "^3.1.0",
     "babel-runtime": "^6.20.0",
