Fix missing + unused deps

--- a/package.json
+++ b/package.json
@@ -28,11 +28,10 @@
     "geojson-flatten": "^0.2.1",
     "get-scrollbar-width": "^1.0.4",
     "insert-css": "^2.0.0",
+    "is-buffer": "^2.0.3",
     "localforage": "^1.5.0",
     "lodash": "^4.16.4",
     "mapbox-gl": "^0.46.0",
-    "material-ui": "^1.0.0-beta.35",
-    "material-ui-icons": "^1.0.0-beta.35",
     "moment": "^2.15.2",
     "object-assign": "^4.1.0",
     "prop-types": "^15.5.10",
@@ -79,7 +78,7 @@
     "glob": "^7.1.2",
     "history": "^4.6.3",
     "mkdirp": "^0.5.1",
-    "precinct": "^3.8.0",
+    "precinct": "^4.2.0",
     "pump": "^1.0.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
