--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "pretty-quick": "^1.6.0",
     "react-storybook-addon-props-combinations": "^1.0.1",
     "storybook-addon-docgen": "^4.0.0",
+    "storybook-addon-intl": "^2.3.0",
     "tap": "^12.0.1",
     "tape": "^4.9.1"
   },
@@ -60,10 +61,12 @@
     "@material-ui/icons": "^2.0.0",
     "@segment/isodate": "^1.0.3",
     "chrono-node": "^1.3.5",
+    "insert-css": "^2.0.0",
     "lodash": "^4.17.10",
     "mapbox-gl": "^0.47.0",
     "object-assign": "^4.1.1",
     "react-intl": "^2.4.0",
+    "react-virtualized": "^9.20.1",
     "react-virtualized-auto-sizer": "^1.0.2",
     "react-window": "^1.0.3",
     "round-to": "^3.0.0",
