--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "main": "src/index.js",
   "scripts": {
     "precommit": "pretty-quick --staged",
+    "prettier": "prettier '**/*.js'",
     "flow": "flow",
-    "build": "babel modules/ -d .",
-    "extract-messages": "extract-messages -l=en,es -o messages -d en 'src/**/*.js'",
+    "flow-typed": "flow-typed install",
+    "build": "babel src/ -d .",
+    "extract-messages": "extract-messages -l=en,es -o messages -d en 'src/**/!(*.test|*.stories).js'",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "test": "babel-tap -j4 'src/**/*.test.js'"
@@ -19,9 +21,11 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.6",
+    "babel-plugin-flow-react-proptypes": "^24.1.0",
     "babel-plugin-react-intl-auto": "^1.1.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-react-jsx-source": "^6.22.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
@@ -42,6 +46,7 @@
     "extract-react-intl-messages": "^0.10.0",
     "flow-bin": "^0.77.0",
     "flow-geojson": "^2.0.6",
+    "flow-typed": "^2.5.1",
     "husky": "^0.14.3",
     "prettier": "^1.13.7",
     "pretty-quick": "^1.6.0",
@@ -61,10 +66,16 @@
     "@material-ui/icons": "^2.0.0",
     "@segment/isodate": "^1.0.3",
     "chrono-node": "^1.3.5",
+    "feature-filter-geojson": "^1.0.0",
     "insert-css": "^2.0.0",
     "lodash": "^4.17.10",
     "mapbox-gl": "^0.47.0",
+    "mem": "^3.0.1",
+    "memoize-one": "^4.0.0",
     "object-assign": "^4.1.1",
+    "prop-types": "^15.6.2",
+    "quick-lru": "^1.1.0",
+    "re-carousel": "^2.0.9",
     "react-intl": "^2.4.0",
     "react-virtualized": "^9.20.1",
     "react-virtualized-auto-sizer": "^1.0.2",
