--- a/.babelrc
+++ b/.babelrc
@@ -1,33 +1,47 @@
 // This file is formatted as JSON5 https://github.com/json5/json5
 {
   presets: [
-    // Strips flow type annotations
-    'flow',
     // Transforms JSX
     'react',
     // Transforms ES6 code and import/export statements
     [
       'env',
       {
-        targets: { browsers: ['last 2 versions', 'not ie < 11'] },
+        targets: {
+          electron: '2.0.0',
+          node: '6.14',
+          browsers: ['last 2 versions', 'not ie < 11']
+        },
+        // Only use polyfills necessary for target env
+        useBuiltIns: true,
         shippedProposals: true
       }
     ]
   ],
-  plugins: [
-    ['react-intl-auto', { filebase: true, removePrefix: 'src' }],
-    'transform-class-properties',
-    'transform-object-rest-spread'
-  ],
   env: {
+    production: {
+      plugins: [
+        ['react-intl-auto', { filebase: true, removePrefix: 'src' }],
+        // Strips out flow types
+        'flow-strip-types',
+        'transform-runtime',
+        'transform-class-properties',
+        'transform-object-rest-spread'
+      ]
+    },
     development: {
       plugins: [
+        // Reduces bundle size by sharing babel helpers between files
+        'transform-runtime',
         // Allows simpler defineMessages with react-intl
         // https://github.com/akameco/babel-plugin-react-intl-auto
         ['react-intl-auto', { filebase: true, removePrefix: 'src' }],
         // Turns flow type annotations into React.PropTypes for runtime
         // type checking. Deadcode wraps in NODE_ENV checks
         ['flow-react-proptypes', { deadCode: true }],
+        // Converts flow annotations into comment syntax
+        // https://flow.org/en/docs/types/comments/
+        'transform-flow-comments',
         // Adds line numbers to stack traces
         // https://www.npmjs.com/package/babel-plugin-transform-react-jsx-source
         'transform-react-jsx-source',
