--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "main": "src/index.js",
   "scripts": {
     "precommit": "pretty-quick --staged",
-    "prettier": "prettier '**/*.js'",
+    "prettier": "pretty-quick",
+    "lint": "eslint '**/*.js'",
     "flow": "flow",
     "flow-typed": "flow-typed install",
-    "build": "babel src/ -d .",
+    "build": "babel 'src/**/!(*.test|*.stories).js' -d commonjs",
     "extract-messages": "extract-messages -l=en,es -o messages -d en 'src/**/!(*.test|*.stories).js'",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
@@ -24,12 +25,13 @@
     "babel-plugin-flow-react-proptypes": "^24.1.0",
     "babel-plugin-react-intl-auto": "^1.1.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-flow-comments": "^6.22.0",
+    "babel-plugin-transform-flow-strip-types": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-react-jsx-source": "^6.22.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
-    "babel-preset-flow": "^6.23.0",
     "babel-preset-react": "^6.24.1",
-    "babel-runtime": "^6.26.0",
     "babel-tap": "^5.0.0",
     "csstype": "^2.5.6",
     "eslint": "^5.2.0",
@@ -65,12 +67,13 @@
     "@material-ui/core": "^1.4.1",
     "@material-ui/icons": "^2.0.0",
     "@segment/isodate": "^1.0.3",
+    "babel-polyfill": "^6.26.0",
+    "babel-runtime": "^6.26.0",
     "chrono-node": "^1.3.5",
     "feature-filter-geojson": "^1.0.0",
     "insert-css": "^2.0.0",
     "lodash": "^4.17.10",
     "mapbox-gl": "^0.47.0",
-    "mem": "^3.0.1",
     "memoize-one": "^4.0.0",
     "object-assign": "^4.1.1",
     "prop-types": "^15.6.2",
@@ -79,7 +82,6 @@
     "react-intl": "^2.4.0",
     "react-virtualized": "^9.20.1",
     "react-virtualized-auto-sizer": "^1.0.2",
-    "react-window": "^1.0.3",
     "round-to": "^3.0.0",
     "url-regex": "^4.1.1",
     "utm": "^1.1.1"
