--- a/package.json
+++ b/package.json
@@ -6,11 +6,10 @@
   "peerDependencies": {
     "react": "^15.4.1 || ^16",
     "react-dom": "^15.4.1 || ^16",
-    "material-ui": "^1.0.0-beta.35"
+    "@material-ui/core": "^1.2.3"
   },
   "dependencies": {
     "@mapbox/sexagesimal": "^1.0.0",
-    "@material-ui/core": "^1.2.3",
     "@material-ui/icons": "^1.1.0",
     "@segment/isodate": "^1.0.2",
     "autosuggest-highlight": "^3.1.0",
