--- a/package.json
+++ b/package.json
@@ -6,21 +6,21 @@
   "peerDependencies": {
     "react": "^15.4.1 || ^16",
     "react-dom": "^15.4.1 || ^16",
-    "@material-ui/core": "^1.2.3"
+    "@material-ui/core": "^1.5.1"
   },
   "dependencies": {
     "@mapbox/sexagesimal": "^1.0.0",
-    "@material-ui/icons": "^1.1.0",
+    "@material-ui/icons": "^1.1.1",
     "@segment/isodate": "^1.0.2",
     "autosuggest-highlight": "^3.1.0",
     "babel-runtime": "^6.20.0",
     "base64-url": "^2.2.0",
     "case": "^1.4.2",
-    "chrono-node": "^1.3.4",
     "classnames": "^2.2.5",
     "d3-dsv": "^1.0.7",
     "debug": "^3.1.0",
     "deep-equal": "^1.0.1",
+    "dehumanize-date": "^2.6.2",
     "feature-filter-geojson": "^1.0.0",
     "file-saver": "^1.3.3",
     "flat": "^4.0.0",
