--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "localforage": "^1.5.0",
     "lodash": "^4.16.4",
     "mapbox-gl": "^0.46.0",
+    "memoize-one": "^5.0.0",
     "moment": "^2.15.2",
     "object-assign": "^4.1.0",
     "prop-types": "^15.5.10",
