--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "react-intl-redux": "^0.6.0",
     "react-isolated-scroll": "^0.1.1",
     "react-redux": "^5.0.5",
-    "react-virtualized": "^9.8.0",
+    "react-virtualized": "9.21.0",
     "recompose": "^0.27.1",
     "redux": "^3.7.1",
     "redux-persist": "^4.8.2",
