--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "rework-import": "^2.1.0",
     "rimraf": "^2.5.4",
     "standard": "^11.0.1",
+    "standard-version": "^6.0.1",
     "storybook-addon-intl": "^2.1.2",
     "tape": "^4.7.0",
     "traverse": "^0.6.6",
@@ -113,7 +114,8 @@
     "watch": "rimraf es5 && babel src/ -w --source-maps -d es5/",
     "prepublish": "npm run build:es5 & npm run build:umd",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "release": "standard-version"
   },
   "standard": {
     "parser": "babel-eslint",
