--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "isobject": "^4.0.0",
     "lodash": "^4.17.11",
     "mapbox-gl": "^1.0.0",
+    "mapeo-schema": "^1.1.0",
     "match-sorter": "^3.1.1",
     "mem": "^5.1.0",
     "memoize-one": "^5.0.4",
