--- a/.eslintrc
+++ b/.eslintrc
@@ -23,6 +23,7 @@
     "browser": true
   },
   "rules": {
-    "react/prop-types": 0
+    "react/prop-types": 0,
+    "react/display-name": 0
   }
 }
