--- a/package.json
+++ b/package.json
@@ -79,8 +79,8 @@
     "@babel/runtime": "^7.4.5",
     "@babel/runtime-corejs3": "^7.4.5",
     "@mapbox/sexagesimal": "^1.1.0",
-    "@material-ui/core": "^4.1.1",
-    "@material-ui/icons": "^4.2.0",
+    "@material-ui/core": "^4.1.3",
+    "@material-ui/icons": "^4.2.1",
     "@material-ui/styles": "^4.1.2",
     "@segment/isodate": "^1.0.3",
     "babel-polyfill": "^6.26.0",
@@ -101,6 +101,7 @@
     "match-sorter": "^3.1.1",
     "mem": "^5.1.0",
     "memoize-one": "^5.0.4",
+    "object-path-immutable": "^3.1.1",
     "quick-lru": "^4.0.1",
     "react-image": "^2.1.3",
     "react-intl": "^3.0.0-beta-8",
