--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "@segment/isodate": "^1.0.3",
     "babel-polyfill": "^6.26.0",
     "babel-runtime": "^6.26.0",
+    "bcp-47": "^1.0.5",
     "clone-deep": "^4.0.1",
     "clsx": "^1.0.4",
     "core-js": "^3.1.4",
@@ -104,7 +105,7 @@
     "object-path-immutable": "^3.1.1",
     "quick-lru": "^4.0.1",
     "react-image": "^2.1.3",
-    "react-intl": "^3.0.0-beta-8",
+    "react-intl": "^3.0.0-beta.17",
     "react-swipeable-views": "^0.13.3",
     "react-virtualized": "^9.21.1",
     "react-virtualized-auto-sizer": "^1.0.2",
