--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "prettier": "pretty-quick",
     "lint": "eslint '**/*.js'",
     "flow": "flow",
-    "flow-typed": "flow-typed install",
+    "flow-typed": "flow-typed install -s -i peer",
     "build": "babel 'src/**/!(*.test|*.stories).js' -d commonjs",
     "extract-messages": "extract-messages -l=en,es -o messages -d en 'src/**/!(*.test|*.stories).js'",
     "storybook": "start-storybook -p 6006",
@@ -83,34 +83,23 @@
     "@material-ui/icons": "^4.2.1",
     "@material-ui/styles": "^4.2.1",
     "@segment/isodate": "^1.0.3",
-    "babel-polyfill": "^6.26.0",
-    "babel-runtime": "^6.26.0",
-    "bcp-47": "^1.0.5",
     "clone-deep": "^4.0.1",
     "clsx": "^1.0.4",
     "core-js": "^3.1.4",
-    "dot-prop": "^5.1.0",
     "downshift": "^3.2.10",
-    "feature-filter-geojson": "^1.0.0",
     "insert-css": "^2.0.0",
-    "is-buffer": "^2.0.3",
     "is-equal-shallow": "^0.1.3",
-    "isobject": "^4.0.0",
     "lodash": "^4.17.14",
     "mapbox-gl": "^1.1.1",
     "mapeo-schema": "^1.3.0",
     "match-sorter": "^3.1.1",
-    "mem": "^5.1.1",
-    "memoize-one": "^5.0.5",
     "object-path-immutable": "^3.1.1",
-    "quick-lru": "^4.0.1",
     "react-image": "^2.1.3",
     "react-intl": "^3.0.0-beta.17",
     "react-swipeable-views": "^0.13.3",
     "react-virtualized": "^9.21.1",
     "react-virtualized-auto-sizer": "^1.0.2",
     "round-to": "^4.0.0",
-    "url-regex": "^5.0.0",
     "utm": "^1.1.1"
   }
 }
