--- a/.eslintrc
+++ b/.eslintrc
@@ -9,7 +9,7 @@
     "prettier/react",
     "prettier/standard"
   ],
-  "plugins": ["flowtype", "react", "prettier", "standard"],
+  "plugins": ["flowtype", "react", "prettier", "standard", "react-hooks"],
   "parser": "babel-eslint",
   "parserOptions": {
     "ecmaVersion": 6,
@@ -24,7 +24,9 @@
   },
   "rules": {
     "react/prop-types": 0,
-    "react/display-name": 0
+    "react/display-name": 0,
+    "react-hooks/rules-of-hooks": "error", // Checks rules of Hooks
+    "react-hooks/exhaustive-deps": "warn" // Checks effect dependencies
   },
   "settings": {
     "react": {
