--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "mapbox-gl": "^1.1.1",
     "mapeo-schema": "^1.3.0",
     "match-sorter": "^3.1.1",
+    "mime": "^2.4.4",
     "object-path-immutable": "^3.1.1",
     "react-image": "^2.1.3",
     "react-intl": "^3.0.0-beta.17",
