--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "clsx": "^1.0.4",
     "core-js": "^3.1.4",
     "downshift": "^3.2.10",
+    "get-scrollbar-width": "^1.0.4",
     "insert-css": "^2.0.0",
     "is-equal-shallow": "^0.1.3",
     "lodash": "^4.17.14",
@@ -103,6 +104,7 @@
     "react-swipeable-views": "^0.13.3",
     "react-virtualized": "^9.21.1",
     "react-virtualized-auto-sizer": "^1.0.2",
+    "react-window": "^1.8.5",
     "round-to": "^4.0.0",
     "utm": "^1.1.1"
   }
