--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@babel/preset-react": "^7.0.0",
     "@storybook/addon-actions": "^5.1.8",
     "@storybook/addon-info": "^5.1.8",
+    "@storybook/addon-knobs": "^5.1.9",
     "@storybook/addon-links": "^5.1.8",
     "@storybook/addons": "^5.1.8",
     "@storybook/react": "^5.1.8",
@@ -101,6 +102,7 @@
     "object-path-immutable": "^3.1.1",
     "react-image": "^2.1.3",
     "react-intl": "^3.0.0-beta.17",
+    "react-mapbox-gl": "^4.5.1",
     "react-swipeable-views": "^0.13.3",
     "react-virtualized": "^9.21.1",
     "react-virtualized-auto-sizer": "^1.0.2",
