--- a/package.json
+++ b/package.json
@@ -10,14 +10,16 @@
     "flow": "flow",
     "flow-typed": "flow-typed install -s -i peer",
     "build": "babel 'src/**/!(*.test|*.stories).js' -d commonjs",
-    "extract-messages": "extract-messages -l=en,es -o messages -d en 'src/**/!(*.test|*.stories).js'",
+    "build:translations": "node scripts/build-translations.js",
+    "extract-messages": "node scripts/extract-messages.js",
+    "prepublish": "npm run build",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "test": "jest"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "pretty-quick --staged"
+      "pre-commit": "pretty-quick --staged && npm run extract-messages"
     }
   },
   "devDependencies": {
@@ -31,6 +33,7 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-flow": "^7.0.0",
     "@babel/preset-react": "^7.0.0",
+    "@digidem/extract-react-intl-messages": "^2.0.0",
     "@storybook/addon-actions": "^5.1.8",
     "@storybook/addon-info": "^5.1.8",
     "@storybook/addon-knobs": "^5.1.9",
@@ -41,15 +44,16 @@
     "babel-loader": "^8.0.6",
     "babel-plugin-flow-react-proptypes": "^25.1.0",
     "babel-plugin-react-intl-auto": "^1.7.2",
+    "babel-plugin-react-intl-id-hash": "^2.0.0",
     "babel-tap": "^5.0.0",
     "csstype": "^2.6.6",
     "dependency-check": "^3.4.1",
-    "eslint": "^6.0.1",
+    "eslint": "^6.1.0",
     "eslint-config-prettier": "^6.0.0",
     "eslint-config-standard": "^13.0.1",
-    "eslint-plugin-flowtype": "^3.10.3",
-    "eslint-plugin-import": "^2.17.3",
-    "eslint-plugin-jest": "^22.10.0",
+    "eslint-plugin-flowtype": "^3.12.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jest": "^22.13.0",
     "eslint-plugin-node": "^9.1.0",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-promise": "^4.1.1",
@@ -60,14 +64,17 @@
     "flow-bin": "^0.102.0",
     "flow-geojson": "^2.0.7",
     "flow-typed": "^2.6.0",
-    "husky": "^3.0.0",
+    "glob": "^7.1.4",
+    "husky": "^3.0.1",
     "jest": "^24.8.0",
+    "mkdirp": "^0.5.1",
     "precinct": "^6.1.2",
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-storybook-addon-props-combinations": "^1.1.0",
+    "rimraf": "^2.6.3",
     "storybook-addon-intl": "^2.4.1",
     "storybook-addon-react-docgen": "^1.2.2",
     "tap": "^14.4.2",
@@ -94,7 +101,7 @@
     "get-scrollbar-width": "^1.0.4",
     "insert-css": "^2.0.0",
     "is-equal-shallow": "^0.1.3",
-    "lodash": "^4.17.14",
+    "lodash": "^4.17.15",
     "mapbox-gl": "^1.1.1",
     "mapeo-schema": "^1.3.0",
     "match-sorter": "^3.1.1",
