--- a/.flowconfig
+++ b/.flowconfig
@@ -1,6 +1,8 @@
 [ignore]
 <PROJECT_ROOT>/node_modules/@mapbox/jsonlint-lines-primitives/test/.*
 <PROJECT_ROOT>/node_modules/config-chain/test/.*
+<PROJECT_ROOT>/esm
+<PROJECT_ROOT>/commonjs
 
 [include]
 
